<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wea"
    android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_rounded_corners_gradient"
                android:orientation="vertical"
                android:padding="15dp">

                <Spinner
                    android:id="@+id/city_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:popupBackground="#d8dced"
                    android:background="#5da0ed">

                </Spinner>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <TextView
                        android:id="@+id/temperature"
                        android:layout_width="0sp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:gravity="center"
                        android:typeface="monospace"
                        android:text="@string/demo_temp"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textColor="#000"
                        android:textSize="50sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/weather_icon"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:layout_weight="50"
                        android:scaleX="4"
                        android:scaleY="4"
                        android:src="@drawable/ic_weather"
                        android:tint="#000" />
                </LinearLayout>
                <RelativeLayout
                    android:background="#d6022863"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"

                    android:padding="5dp">

                    <TextView
                        android:id="@+id/weather_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/demo_weather_status"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textColor="#fff"
                        android:typeface="monospace"/>
                </LinearLayout>
                </RelativeLayout>
                <RelativeLayout
                    android:background="#d6151c28"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:weightSum="100">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="45"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/demo_min_temp"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            android:textColor="#fff"
                            android:textSize="14sp"
                            android:typeface="monospace"/>

                        <TextView
                            android:id="@+id/min_temp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/demo_temp"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            android:textColor="#fff"
                            android:textSize="14sp"
                            android:typeface="monospace"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/demo_max_temp"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            android:textColor="#fff"
                            android:textSize="14sp"
                            android:typeface="monospace"/>

                        <TextView
                            android:id="@+id/max_temp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/demo_temp"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            android:textColor="#fff"
                            android:textSize="14sp"
                            android:typeface="monospace"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="35"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/demo_pressure"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            android:textColor="#fff"
                            android:typeface="monospace"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/pressure"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/demo_temp"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            android:textColor="#fff"
                            android:textSize="14sp"
                            android:typeface="monospace"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/demo_humidity"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            android:textColor="#fff"
                            android:textSize="14sp"
                            android:typeface="monospace"/>

                        <TextView
                            android:id="@+id/humidity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/demo_temp"
                            android:textSize="14sp"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            android:textColor="@color/colorWhite"
                            android:typeface="monospace"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="20"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/demo_rain"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            android:textColor="#fff"
                            android:textSize="14sp"
                            android:typeface="monospace"/>

                        <TextView
                            android:id="@+id/rain"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/demo_temp"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            android:textColor="#fff"
                            android:textSize="14sp"
                            android:typeface="monospace"/>

                    </LinearLayout>
                </LinearLayout>
                </RelativeLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp"

                    android:weightSum="100">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="45"

                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/demo_wind_speed"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            android:textColor="#fff"
                            android:textSize="14sp"
                            android:typeface="monospace"/>

                        <TextView
                            android:id="@+id/wind_speed"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/demo_temp"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            android:textColor="#fff"
                            android:textSize="14sp"
                            android:typeface="monospace"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="55"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/demo_wind_degree"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            android:textColor="#fff"
                            android:textSize="14sp"
                            android:typeface="monospace"/>

                        <TextView
                            android:id="@+id/wind_degree"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/demo_temp"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            android:textColor="#fff"
                            android:textSize="14sp"
                            android:typeface="monospace"/>

                    </LinearLayout>


                </LinearLayout>
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycle_view_temp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="22dp"
                android:padding="5dp">

            </android.support.v7.widget.RecyclerView>
        </LinearLayout>

</LinearLayout>